5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1734_2502.log
== TEST (2019-05-07 22:08:16) 
-- CODE:
print(-1**2)
-- OUTPUT:
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:08:29) 
-- CODE:
print(-1^2)
-- OUTPUT:
-3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:08:43) 
-- CODE:
print(-1*-1)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:08:53) 
-- CODE:
print(-1*1)
-- OUTPUT:
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:09:00) 
-- CODE:
print(-1**1)
-- OUTPUT:
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:09:07) 
-- CODE:
print(-1**2)
-- OUTPUT:
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:12:01) 
-- CODE:
h=1
print(-h)
-- OUTPUT:
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:12:12) 
-- CODE:
h=-1
print(-h)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:16:21) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
d=1
g=1
while(j<x):
	s=s-((1/g*3**j)*d)
	d=-d
	g=g+2
	j=j+1
print(round((12**0.5*s),8))	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    s=s-((1/g*3**j)*d)
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:16:26) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
d=1
g=1
while(j<x):
	s=s-((1/g*3**j)*d)
	d=-d
	g=g+2
	j=j+1
print(round((12**0.5*s),8))	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    s=s-((1/g*3**j)*d)
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:16:44) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
d=1
g=1
s=0
while(j<x):
	s=s-((1/g*3**j)*d)
	d=-d
	g=g+2
	j=j+1
print(round((12**0.5*s),8))	
	
	
-- OUTPUT:
-7125.58712382
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:16:58) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
d=1
g=1
s=0
while(j<x):
	s=s+((1/g*3**j)*d)
	d=-d
	g=g+2
	j=j+1
print(round((12**0.5*s),8))	
	
	
-- OUTPUT:
7125.58712382
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:17:06) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
d=1
g=1
s=0
while(j<x):
	s=s+((1/g*3**j)*d)
	d=-d
	g=g+2
	j=j+1
print(round((12**0.5*s),8))	
	
	
-- OUTPUT:
7125.58712382
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 22:17:15) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
d=1
g=1
s=0
while(j<x):
	s=s+((1/g*3**j)*d)
	d=-d
	g=g+2
	j=j+1
print(round((12**0.5*s),8))	
	
	
-- EXECUTION TIME:
0.142293
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
7125.58712382
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
420865.97458955
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
-363.2842469
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:22:20) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
d=1
g=1
s=0
while(j<x):
	s=s+((1/g*(3**j))*d)
	d=-d
	g=g+2
	j=j+1
r=(12**0.5)*s	
print(round((r,8))	
	
	
-- ERROR:
File "XXXX", line 15
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:22:34) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
d=1
g=1
s=0
while(j<x):
	s=s+((1/g*(3**j))*d)
	d=-d
	g=g+2
	j=j+1
r=(12**0.5)*s	
print(round((r,8))
-- ERROR:
File "XXXX", line 13
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:23:01) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
d=1
g=1
s=0
while(j<x):
	s=s+((1/g*(3**j))*d)
	d=-d
	g=g+2
	j=j+1
r=(12**0.5)*s	
print(round((r,8)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(round((r,8)))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:23:30) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
d=1
g=1
s=0
while(j<x):
	s=s+((1/g*(3**j))*d)
	d=-d
	g=g+2
	j=j+1
r=(12**0.5)*s
r=round(r,8)
print(round((r,8)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(round((r,8)))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:23:50) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
d=1
g=1
s=0
while(j<x):
	s=s+((1/g*(3**j))*d)
	d=-d
	g=g+2
	j=j+1
r=(12**0.5)*s
r=round(r,8)
print(r)
-- OUTPUT:
7125.58712382
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:23:57) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
d=1
g=1
s=0
while(j<x):
	s=s+((1/g*(3**j))*d)
	d=-d
	g=g+2
	j=j+1
r=(12**0.5)*s
r=round(r,8)
print(r)
-- OUTPUT:
7125.58712382
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:24:08) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
d=1
g=1
s=0
while(j<x):
	s=s+((1/g*(3**j))*d)
	d=-d
	g=g+2
	j=j+1
r=(12**0.5)*s
r=round(r,8)
print(r)
-- OUTPUT:
7125.58712382
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 00:12:07) 
-- CODE:
x=float(input("Digite um numero: "))
j=1
d=1
g=1
s=0
b=0
if(x==1):
	print(12**0.5)
else:
	while(j<x):
		s=s+((1/g*(3**b))*d)
		g=g+2
		b=b+1
		j=j+1
		d=-d
		
if(x!=1):
	m=(12**0.5)*s
	m=round(m,8)
	print(m)
-- OUTPUT:
-2614.97174629
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 00:12:33) 
-- CODE:
x=float(input("Digite um numero: "))
j=1
d=1
g=1
s=0
b=0
if(x==1):
	print(round(12**0.5,8))
else:
	while(j<x):
		s=s+((1/g*(3**b))*d)
		g=g+2
		b=b+1
		j=j+1
		d=-d
		
if(x!=1):
	m=(12**0.5)*s
	m=round(m,8)
	print(m)
-- OUTPUT:
-2614.97174629
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 00:12:39) 
-- CODE:
x=float(input("Digite um numero: "))
j=1
d=1
g=1
s=0
b=0
if(x==1):
	print(round(12**0.5,8))
else:
	while(j<x):
		s=s+((1/g*(3**b))*d)
		g=g+2
		b=b+1
		j=j+1
		d=-d
		
if(x!=1):
	m=(12**0.5)*s
	m=round(m,8)
	print(m)
-- OUTPUT:
-2614.97174629
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 00:15:11) 
-- CODE:
x=float(input("Digite um numero: "))
j=1
d=1
g=1
s=0
b=0
if(x==1):
	print(round(12**0.5,8))
else:
	while(j<x):
		s=s+((1/g*(3**b))*d)
		g=g+2
		b=b+1
		j=j+1
		d=-d

print(s)		
if(x!=1):
	m=(12**0.5)*s
	m=round(m,8)
	print(m)
-- OUTPUT:
-754.8773208215931
-2614.97174629
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 00:16:35) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
d=1
g=1
s=0
b=0
while(j<x):
	s=s+((1/g*(3**b))*d)
	g=g+2
	b=b+1
	j=j+1
	d=-d
	
print(s)	
m=(12**0.5)*s
m=round(m,8)
print(m)
-- OUTPUT:
2056.9798220355497
7125.58712382
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 00:16:43) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
d=1
g=1
s=0
b=0
while(j<x):
	s=s+((1/g*(3**b))*d)
	g=g+2
	b=b+1
	j=j+1
	d=-d
	
print(s)	
m=(12**0.5)*s
m=round(m,8)
print(m)
-- OUTPUT:
2056.9798220355497
7125.58712382
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 10:08:41) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
d=1
g=1
s=0
b=1
c=0
while(x>j):
	s=s+(g*d)
	g=1/(b*(3**c)
	c=c+1
	b=b+2
	j=j+1
	d=-d
m=(12**0.5)*s
m=round(m,8)
print(m)
-- ERROR:
File "XXXX", line 11
    c=c+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:20:48) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
d=1
g=1
s=0
b=1
c=0
while(x>j):
	g=1/b*(3**c)
	s=s+(g*d)
	c=c+1
	b=b+2
	j=j+1
	d=-d
m=(12**0.5)*s
m=round(m,8)
print(m)
-- OUTPUT:
7125.58712382
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:20:56) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
d=1
g=1
s=0
b=1
c=0
while(x>j):
	g=1/b*(3**c)
	s=s+(g*d)
	c=c+1
	b=b+2
	j=j+1
	d=-d
m=(12**0.5)*s
m=round(m,8)
print(m)
-- OUTPUT:
7125.58712382
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:22:09) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
d=1
g=1
s=0
b=1
c=0
while(x>j):
	g=1/(b*(3**c))
	s=s+(g*d)
	c=c+1
	b=b+2
	j=j+1
	d=-d
m=(12**0.5)*s
m=round(m,8)
print(m)
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:22:16) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
d=1
g=1
s=0
b=1
c=0
while(x>j):
	g=1/(b*(3**c))
	s=s+(g*d)
	c=c+1
	b=b+2
	j=j+1
	d=-d
m=(12**0.5)*s
m=round(m,8)
print(m)
-- EXECUTION TIME:
0.144529
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 10:31:06) 
-- CODE:
x=float(input("Digite um numero: "))
j=0
d=1
g=1
s=0
b=1
c=0
while(x>j):
	g=1/(b*(3**c))
	s=s+(g*d)
	c=c+1
	b=b+2
	j=j+1
	d=-d
m=(12**0.5)*s
m=round(m,8)
print(m)
-- EXECUTION TIME:
0.136371
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
